force-app/main/default/objects/Position__c/fields/AveragePurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>AveragePurchasePrice__c</fullName>
    <description>Calculation of the Average Price of the position</description>
    <formula>IF(TotalQuantity__c &gt; 0, TotalInvested__c / TotalQuantity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>