force-app/main/default/objects/Position__c/fields/Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Enterprise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to link the Enterprise concerned by the stock bought</description>
    <label>Enterprise</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>