force-app/main/default/objects/Position__c/fields/StatusCalculate__c.field-meta.xml
<CustomField>
    <fullName>StatusCalculate__c</fullName>
    <description>Determine if the position is sold or not</description>
    <formula>IF(TotalInvested__c &lt;= TotalSold__c,&apos;SOLD&apos;,&apos;ONGOING&apos;)</formula>
    <label>Status (Calculate)</label>
    <type>Text</type>
</CustomField>