force-app/main/default/objects/Position__c/fields/TickerSymbol__c.field-meta.xml
<CustomField>
    <fullName>TickerSymbol__c</fullName>
    <description>Identify the ticker Symbol of the Position</description>
    <label>TickerSymbol</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>