force-app/main/default/objects/Position__c/fields/TotalInvested__c.field-meta.xml
<CustomField>
    <fullName>TotalInvested__c</fullName>
    <description>Roll Up Summary to calculate the Total Invested for this Position</description>
    <label>Total Invested</label>
    <summarizedField>Transaction__c.TotalAmount__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.TransactionType__c</field>
        <operation>equals</operation>
        <value>Buy, Dividend Reinvestment</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Position__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>