force-app/main/default/objects/Position__c/fields/TotalQuantity__c.field-meta.xml
<CustomField>
    <fullName>TotalQuantity__c</fullName>
    <description>Roll Up Summary to calculate the Total of stocks purchases</description>
    <label>Total Quantity</label>
    <summarizedField>Transaction__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.TransactionType__c</field>
        <operation>equals</operation>
        <value>Buy, Dividend Reinvestment</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Position__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>