force-app/main/default/objects/Position__c/fields/TotalSold__c.field-meta.xml
<CustomField>
    <fullName>TotalSold__c</fullName>
    <description>Roll Up Summary to calculate the Total of Sold stocks</description>
    <label>Total Sold</label>
    <summarizedField>Transaction__c.TotalAmount__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.TransactionType__c</field>
        <operation>equals</operation>
        <value>Sell</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Position__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>